examples/pass/errorFuncion2.c
int funcion(int n){ n = 2;}

int main(){
    int x = funcion(2);
    print("Mala declaracion de funcion: errorFuncion2");
    return 0;
}
