examples/error/errorFuncion.c
funcion(int n){return n;}

int main(){
    int x = funcion(2);
    print("Mala declaracion de funcion: errorFuncion");
    return 0;
}
